--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,7 @@ h1 {
 .heart-container .small-heart:nth-child(8) { top: 25%; left: 15%; transform: translate(-50%, -50%); }
 .heart-container .small-heart:nth-child(9) { top: -10%; left: 70%; transform: translate(-50%, -50%); }
 .heart-container .small-heart:nth-child(10) { top: -10%; left: 30%; transform: translate(-50%, -50%); }
+
+.mensaje{
+    margin: 2rem; /* Mismo valor que el ancho para mantener proporción */
+}   
